src/rules/__snapshots__/no-conditional-comment.spec.ts.snap
// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`rule no-conditional-comment should contain documentation 1`] = `
{
  "description": "Microsoft Internet Explorer previously supported using special HTML comments (conditional comments) for targeting specific versions of IE but since IE 10 it is deprecated and not supported in standards mode.",
  "url": "https://html-validate.org/rules/no-conditional-comment.html",
}
`;

exports[`rule no-conditional-comment smoketest 1`] = `
"error: Use of conditional comments are deprecated (no-conditional-comment)
  2 | 	<!-- examples from MSDN documentation -->
  3 |
> 4 | 	<!--[if IE]><p>You are using Internet Explorer.</p><![endif]-->
    | 	^^^^^^^^^^^^
  5 | 	<![if !IE]><p>You are not using Internet Explorer.</p><![endif]>
  6 |
  7 | 	<!--[if IE 7]><p>Welcome to Internet Explorer 7!</p><![endif]-->
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
  2 | 	<!-- examples from MSDN documentation -->
  3 |
> 4 | 	<!--[if IE]><p>You are using Internet Explorer.</p><![endif]-->
    | 	                                                   ^^^^^^^^^^^^
  5 | 	<![if !IE]><p>You are not using Internet Explorer.</p><![endif]>
  6 |
  7 | 	<!--[if IE 7]><p>Welcome to Internet Explorer 7!</p><![endif]-->
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
  3 |
  4 | 	<!--[if IE]><p>You are using Internet Explorer.</p><![endif]-->
> 5 | 	<![if !IE]><p>You are not using Internet Explorer.</p><![endif]>
    | 	^^^^^^^^^^^
  6 |
  7 | 	<!--[if IE 7]><p>Welcome to Internet Explorer 7!</p><![endif]-->
  8 | 	<!--[if !(IE 7)]><p>You are not using version 7.</p><![endif]-->
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
  3 |
  4 | 	<!--[if IE]><p>You are using Internet Explorer.</p><![endif]-->
> 5 | 	<![if !IE]><p>You are not using Internet Explorer.</p><![endif]>
    | 	                                                      ^^^^^^^^^^
  6 |
  7 | 	<!--[if IE 7]><p>Welcome to Internet Explorer 7!</p><![endif]-->
  8 | 	<!--[if !(IE 7)]><p>You are not using version 7.</p><![endif]-->
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
   5 | 	<![if !IE]><p>You are not using Internet Explorer.</p><![endif]>
   6 |
>  7 | 	<!--[if IE 7]><p>Welcome to Internet Explorer 7!</p><![endif]-->
     | 	^^^^^^^^^^^^^^
   8 | 	<!--[if !(IE 7)]><p>You are not using version 7.</p><![endif]-->
   9 |
  10 | 	<!--[if gte IE 7]><p>You are using IE 7 or greater.</p><![endif]-->
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
   5 | 	<![if !IE]><p>You are not using Internet Explorer.</p><![endif]>
   6 |
>  7 | 	<!--[if IE 7]><p>Welcome to Internet Explorer 7!</p><![endif]-->
     | 	                                                    ^^^^^^^^^^^^
   8 | 	<!--[if !(IE 7)]><p>You are not using version 7.</p><![endif]-->
   9 |
  10 | 	<!--[if gte IE 7]><p>You are using IE 7 or greater.</p><![endif]-->
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
   6 |
   7 | 	<!--[if IE 7]><p>Welcome to Internet Explorer 7!</p><![endif]-->
>  8 | 	<!--[if !(IE 7)]><p>You are not using version 7.</p><![endif]-->
     | 	^^^^^^^^^^^^^^^^^
   9 |
  10 | 	<!--[if gte IE 7]><p>You are using IE 7 or greater.</p><![endif]-->
  11 | 	<!--[if (IE 5)]><p>You are using IE 5 (any version).</p><![endif]-->
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
   6 |
   7 | 	<!--[if IE 7]><p>Welcome to Internet Explorer 7!</p><![endif]-->
>  8 | 	<!--[if !(IE 7)]><p>You are not using version 7.</p><![endif]-->
     | 	                                                    ^^^^^^^^^^^^
   9 |
  10 | 	<!--[if gte IE 7]><p>You are using IE 7 or greater.</p><![endif]-->
  11 | 	<!--[if (IE 5)]><p>You are using IE 5 (any version).</p><![endif]-->
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
   8 | 	<!--[if !(IE 7)]><p>You are not using version 7.</p><![endif]-->
   9 |
> 10 | 	<!--[if gte IE 7]><p>You are using IE 7 or greater.</p><![endif]-->
     | 	^^^^^^^^^^^^^^^^^^
  11 | 	<!--[if (IE 5)]><p>You are using IE 5 (any version).</p><![endif]-->
  12 | 	<!--[if (gte IE 5.5)&(lt IE 7)]><p>You are using IE 5.5 or IE 6.</p><![endif]-->
  13 | 	<!--[if lt IE 5.5]><p>Please upgrade your version of Internet Explorer.</p><![endif]-->
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
   8 | 	<!--[if !(IE 7)]><p>You are not using version 7.</p><![endif]-->
   9 |
> 10 | 	<!--[if gte IE 7]><p>You are using IE 7 or greater.</p><![endif]-->
     | 	                                                       ^^^^^^^^^^^^
  11 | 	<!--[if (IE 5)]><p>You are using IE 5 (any version).</p><![endif]-->
  12 | 	<!--[if (gte IE 5.5)&(lt IE 7)]><p>You are using IE 5.5 or IE 6.</p><![endif]-->
  13 | 	<!--[if lt IE 5.5]><p>Please upgrade your version of Internet Explorer.</p><![endif]-->
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
   9 |
  10 | 	<!--[if gte IE 7]><p>You are using IE 7 or greater.</p><![endif]-->
> 11 | 	<!--[if (IE 5)]><p>You are using IE 5 (any version).</p><![endif]-->
     | 	^^^^^^^^^^^^^^^^
  12 | 	<!--[if (gte IE 5.5)&(lt IE 7)]><p>You are using IE 5.5 or IE 6.</p><![endif]-->
  13 | 	<!--[if lt IE 5.5]><p>Please upgrade your version of Internet Explorer.</p><![endif]-->
  14 |
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
   9 |
  10 | 	<!--[if gte IE 7]><p>You are using IE 7 or greater.</p><![endif]-->
> 11 | 	<!--[if (IE 5)]><p>You are using IE 5 (any version).</p><![endif]-->
     | 	                                                        ^^^^^^^^^^^^
  12 | 	<!--[if (gte IE 5.5)&(lt IE 7)]><p>You are using IE 5.5 or IE 6.</p><![endif]-->
  13 | 	<!--[if lt IE 5.5]><p>Please upgrade your version of Internet Explorer.</p><![endif]-->
  14 |
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
  10 | 	<!--[if gte IE 7]><p>You are using IE 7 or greater.</p><![endif]-->
  11 | 	<!--[if (IE 5)]><p>You are using IE 5 (any version).</p><![endif]-->
> 12 | 	<!--[if (gte IE 5.5)&(lt IE 7)]><p>You are using IE 5.5 or IE 6.</p><![endif]-->
     | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  13 | 	<!--[if lt IE 5.5]><p>Please upgrade your version of Internet Explorer.</p><![endif]-->
  14 |
  15 | 	<!--[if true]>You are using an <em>uplevel</em> browser.<![endif]-->
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
  10 | 	<!--[if gte IE 7]><p>You are using IE 7 or greater.</p><![endif]-->
  11 | 	<!--[if (IE 5)]><p>You are using IE 5 (any version).</p><![endif]-->
> 12 | 	<!--[if (gte IE 5.5)&(lt IE 7)]><p>You are using IE 5.5 or IE 6.</p><![endif]-->
     | 	                                                                    ^^^^^^^^^^^^
  13 | 	<!--[if lt IE 5.5]><p>Please upgrade your version of Internet Explorer.</p><![endif]-->
  14 |
  15 | 	<!--[if true]>You are using an <em>uplevel</em> browser.<![endif]-->
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
  11 | 	<!--[if (IE 5)]><p>You are using IE 5 (any version).</p><![endif]-->
  12 | 	<!--[if (gte IE 5.5)&(lt IE 7)]><p>You are using IE 5.5 or IE 6.</p><![endif]-->
> 13 | 	<!--[if lt IE 5.5]><p>Please upgrade your version of Internet Explorer.</p><![endif]-->
     | 	^^^^^^^^^^^^^^^^^^^
  14 |
  15 | 	<!--[if true]>You are using an <em>uplevel</em> browser.<![endif]-->
  16 | 	<![if false]>You are using a <em>downlevel</em> browser.<![endif]>
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
  11 | 	<!--[if (IE 5)]><p>You are using IE 5 (any version).</p><![endif]-->
  12 | 	<!--[if (gte IE 5.5)&(lt IE 7)]><p>You are using IE 5.5 or IE 6.</p><![endif]-->
> 13 | 	<!--[if lt IE 5.5]><p>Please upgrade your version of Internet Explorer.</p><![endif]-->
     | 	                                                                           ^^^^^^^^^^^^
  14 |
  15 | 	<!--[if true]>You are using an <em>uplevel</em> browser.<![endif]-->
  16 | 	<![if false]>You are using a <em>downlevel</em> browser.<![endif]>
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
  13 | 	<!--[if lt IE 5.5]><p>Please upgrade your version of Internet Explorer.</p><![endif]-->
  14 |
> 15 | 	<!--[if true]>You are using an <em>uplevel</em> browser.<![endif]-->
     | 	^^^^^^^^^^^^^^
  16 | 	<![if false]>You are using a <em>downlevel</em> browser.<![endif]>
  17 |
  18 | 	<!--[if true]><![if IE 7]><p>This nested comment is displayed in IE 7.</p><![endif]><![endif]-->
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
  13 | 	<!--[if lt IE 5.5]><p>Please upgrade your version of Internet Explorer.</p><![endif]-->
  14 |
> 15 | 	<!--[if true]>You are using an <em>uplevel</em> browser.<![endif]-->
     | 	                                                        ^^^^^^^^^^^^
  16 | 	<![if false]>You are using a <em>downlevel</em> browser.<![endif]>
  17 |
  18 | 	<!--[if true]><![if IE 7]><p>This nested comment is displayed in IE 7.</p><![endif]><![endif]-->
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
  14 |
  15 | 	<!--[if true]>You are using an <em>uplevel</em> browser.<![endif]-->
> 16 | 	<![if false]>You are using a <em>downlevel</em> browser.<![endif]>
     | 	^^^^^^^^^^^^^
  17 |
  18 | 	<!--[if true]><![if IE 7]><p>This nested comment is displayed in IE 7.</p><![endif]><![endif]-->
  19 | </body>
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
  14 |
  15 | 	<!--[if true]>You are using an <em>uplevel</em> browser.<![endif]-->
> 16 | 	<![if false]>You are using a <em>downlevel</em> browser.<![endif]>
     | 	                                                        ^^^^^^^^^^
  17 |
  18 | 	<!--[if true]><![if IE 7]><p>This nested comment is displayed in IE 7.</p><![endif]><![endif]-->
  19 | </body>
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
  16 | 	<![if false]>You are using a <em>downlevel</em> browser.<![endif]>
  17 |
> 18 | 	<!--[if true]><![if IE 7]><p>This nested comment is displayed in IE 7.</p><![endif]><![endif]-->
     | 	^^^^^^^^^^^^^^
  19 | </body>
  20 |
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
  16 | 	<![if false]>You are using a <em>downlevel</em> browser.<![endif]>
  17 |
> 18 | 	<!--[if true]><![if IE 7]><p>This nested comment is displayed in IE 7.</p><![endif]><![endif]-->
     | 	              ^^^^^^^^^^^^
  19 | </body>
  20 |
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
  16 | 	<![if false]>You are using a <em>downlevel</em> browser.<![endif]>
  17 |
> 18 | 	<!--[if true]><![if IE 7]><p>This nested comment is displayed in IE 7.</p><![endif]><![endif]-->
     | 	                                                                          ^^^^^^^^^^
  19 | </body>
  20 |
Selector: body
error: Use of conditional comments are deprecated (no-conditional-comment)
  16 | 	<![if false]>You are using a <em>downlevel</em> browser.<![endif]>
  17 |
> 18 | 	<!--[if true]><![if IE 7]><p>This nested comment is displayed in IE 7.</p><![endif]><![endif]-->
     | 	                                                                                    ^^^^^^^^^^^^
  19 | </body>
  20 |
Selector: body"
`;
